packaging/k8s/postgrest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgrest
spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgrest

  template:
    metadata:
      labels:
        app: postgrest

    spec:
      containers:
      - name: postgrest
        image: postgrest/postgrest:v14.1
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 3000
