packaging/k8s/postgrest-service-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgrest
spec:
  selector:
    app: postgrest

  ports:
  - name: http
    port: 80
    targetPort: 3000
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: postgrest
spec:
  to:
    kind: Service
    name: postgrest

  port:
    targetPort: http
